Fixed warnings
- Removed unused imports.
- Preferred ImmutableSet to the convenience methods in Set.
- Annotated methods with ignorable return values.